# pendulum_pd

./: .gitignore  CMakeLists.txt  README.md
assets/: double_pendulum.xml  pendulum.xml
src/: double_main.c  main.c
